2015-02-12  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/contacts/contact_manage.php: Fixed bug
	updating contacts.

2015-02-12  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/contacts/contact_manage.php: Fixed bug
	#1607.

2015-02-11  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/ajax/crm.php
	  include/js/integria_crm.js
	  operation/companies/company_detail.php
	  operation/contracts/contract_detail.php
	  operation/invoices/invoices.php
	  operation/leads/lead.php
	  operation/leads/lead_detail.php: Fixed bug #1763.

2015-02-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* operation/incidents/incident_detail.php: Ticket #1747.

2015-02-09  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/help/en/help_linked_values.php
	  include/help/es/help_linked_values.php: Updated help.

2015-02-06  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_demo.sql
	  include/functions_form.php
	  include/js/integria_incident_search.js
	  operation/incidents/incident_detail.php
	  operation/incidents/incident_search_logic.php
	  operation/incidents/incident_type_field.php
	  
	* images/help/linked_field1.png
	  images/help/linked_field2.png
	  images/help/linked_field3.png
	  images/help/linked_field4.png
	  include/help/en/help_linked_values.php
	  include/help/es/help_linked_values.php: Added files.

2015-02-05  Vanessa Gil <vanessa.gil@artica.es>
	
	* integria_db.sql
	  integria_dbdata.sql
	  godmode/usuarios/import_from_csv.php
	  include/functions_form.php
	  include/js/integria_incident_search.js
	  operation/incidents/incident_detail.php
	  operation/incidents/incident_search_logic.php
	  operation/incidents/incident_type_field.php
	  operation/incidents/type_detail.php: Fixed bug #1732.

2015-01-29  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/export_csv.php
	  include/functions_crm.php
	  operation/invoices/invoice_detail.php: Fixed bugs
	#1649, #1627.

2014-11-24  Vanessa Gil <vanessa.gil@artica.es>
	
	* include/styles/integria.css: Changed position of